<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lebowski</string>
    <!--Pages-->

    <string name="context_menu_to_draft">To draft</string>
    <string name="context_menu_add_operation">Add operation</string>
    <string name="context_menu_delete">Delete</string>

    <string name="number_picker_title">Days</string>
    <string name="number_picker_message">Pick days count</string>
    <string name="number_picker_done">Done</string>
    <string name="number_picker_cancel">Cancel</string>


    <!--home page-->
    <string name="rate">Rate</string>
    <string name="future_operations">Here will be your operation history</string>
    <!--speed dial-->
    <string name="add_account">Add account</string>
    <string name="add_expenditure">Add expenditure</string>
    <string name="add_income">Add income</string>
    <string name="manage_categories">Manage categories</string>
    <string name="tbd">TBD</string>
    <!--home page-->

    <!--operations page-->
    <string name="operations_page_title">Operations</string>
    <string name="operation_page_tab_history">History</string>
    <string name="operation_page_tab_periodical">Periodical</string>
    <string name="operation_page_tab_draft">Draft</string>
    <!--operations page-->

    <!--settings page-->
    <string name="settings">Settings</string>
    <string name="language">App language</string>
    <string-array name="languages">
        <item>Русский</item>
        <item>English</item>
    </string-array>
    <string name="settings_switch_outgo">Show only outgo</string>
    <string name="settings_switch_legend">Show chart legend</string>
    <string name="mit_license">Copyright © 2018
            THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
            IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
            FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
            AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
            LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
            OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
            SOFTWARE.
    </string>
    <string name="license">License</string>
    <string name="feedback">Feedback</string>

    <!--settings page-->

    <!--statisitcs page-->
    <string name="statisitcs">Statisitcs</string>
    <string name="start_date">Start date</string>
    <string name="finish_date">Finish date</string>
    <string name="plot_btn">Plot</string>
    <string name="summary_incorrect_value">Incorrect value</string>
    <!--statisitcs page-->

    <!--about page-->
    <string name="about">About</string>
    <string name="year">2018</string>
    <string name="description">Coolest app to control your finance.\nThis app can help you answer the question: \'Where\'s the money?\'</string>
    <!--about page-->

    <!--add operation page-->
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="account">Account</string>
    <string name="amount">Amount</string>
    <string name="add">Add</string>
    <string name="periodic">Periodic</string>
    <string name="periodic_hint">Periodic</string>
    <string name="incorrect_data">Incorrect input data</string>
    <string name="operation_incorrect_value">Incorrect value</string>
    <!--add operation page-->

    <!--Pages-->


    <!--Categories-->
    <string name="vehicle">Vehicle</string>
    <string name="housing">Housing</string>
    <string name="health_and_beaty">Health and beauty</string>
    <string name="art">Art</string>
    <string name="commission">Commission</string>
    <string name="utility_payments">Utility payments</string>
    <string name="communication">Communication</string>
    <string name="education">Education</string>
    <string name="entertainment_and_leisure">Entertainment and leisure</string>
    <string name="products">Products</string>
    <string name="shops">Shops</string>
    <string name="other_expenses">Other expenses</string>
    <string name="refund">Refund</string>
    <string name="salary">Salary</string>
    <string name="other_income">Other income</string>
    <!--Categories-->

    <!--Accounts-->
    <string name="cash">Cash</string>
    <string name="credit_card">Credit card</string>
    <string name="successfully_added">Added successfully</string>
    <string name="currency">Currency</string>
    <string name="account_input_title">Account title</string>
    <string name="account_incorrect_name">Incorrect name</string>
    <!--Accounts-->

</resources>
