...
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/item_input_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/moneyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:textColor="@android:color/black" />

...
                android:focusableInTouchMode="false"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_input_margin"
            android:background="@color/colorPrimary"
            android:elevation="@dimen/item_elevation"
            android:text="@string/add"
...
